DDW-431 - Newsfeed shadow fixes - fixes for scrollbar

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -113,12 +113,13 @@
     }
 
     *::-webkit-scrollbar-track {
-      margin: 25px 0;
+      margin-top: 25px;
+      margin-bottom: 11px;
     }
 
     &.hasShadow {
       *::-webkit-scrollbar-track {
-        margin: 20px 0 11px;
+        margin-top: 22px;
       }
     }
 
